# ssgc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CandRuntime.sln  README.md  code-style-guide.md
modules/caf/: CMakeLists.txt
modules/caf/inc/: caf.hpp  caf_cache_file.hpp  caf_config.hpp  caf_context.hpp  caf_imgui_ext.hpp  caf_predef.hpp  caf_time.hpp
modules/caf/src/: caf_cache_file.cpp  caf_imgui_ext.cpp  caf_time.cpp
modules/cnd/: CMakeLists.txt
modules/cnd/inc/: cli_main.hpp  use_ccapi.hpp  use_clmsg.hpp  use_corevals.hpp
modules/cnd/inc/ccapi/: cppconfig.hpp  macroconfig.hpp
modules/cnd/inc/cldata/: ast.hpp  synth_ast.hpp  translation_input.hpp  translation_output.hpp
modules/cnd/inc/cldev/: clmsg.hpp  compiler_message_base.hpp  compiler_message_base.tpp  diagnostic_messages.hpp  error_messages.hpp
modules/cnd/inc/corevals/: cli_messages.hpp  reflected_meta_enum.hpp
modules/cnd/inc/deprecated/: cnd_ast.hpp  cnd_ceval.hpp  cnd_clerr.hpp  cnd_cli_predefval.hpp  cnd_compiler.hpp  cnd_compiler.tpp  cnd_constdef.hpp  cnd_constdef.tpp  cnd_cst.hpp  cnd_lexer.hpp  cnd_parser.hpp  cnd_scanner.hpp  cnd_src_cursor.hpp  cnd_src_traits.hpp  cnd_src_traits.tpp  cnd_translation_unit.hpp  source_lines.hpp
modules/cnd/inc/trtools/: abstractor.hpp  compositor.hpp  driver.hpp  lr_parser.hpp  parser.hpp  token_closure.hpp  token_cursor.hpp  token_cursor.tpp  token_scope.hpp  token_scope.tpp
modules/cnd/src/: cli_main.cpp  cnd_compiler.cpp  cnd_cst.cpp  cnd_lexer.cpp  cnd_main.cpp  cnd_parser.cpp  cnd_tk_cursor.cpp  driver.cpp  token_closure.cpp
modules/cnd/ut/: sut_LexerBasics.cpp  sut_LexerLexEscapedCharSequence.cpp  sut_LexerLexNumber.cpp  test_trtools_parser.hpp  ut_cnd_compiler.hpp  ut_cnd_lexer.hpp  ut_cnd_scanner.cpp
modules/cnd/ut/res/: ut_compiler_Fundamentals.cnd
modules/cxxx/: CMakeLists.txt
modules/cxxx/inc/: cxxx.hpp  cxxx_enumerated_flags.hpp  cxxx_fsys.hpp  cxxx_import_std.hpp
modules/cxxx/ut/: ut_cxxx.h  ut_expected.h  utmain.cpp
modules/minitest2/: CMakeLists.txt
modules/minitest2/bsys/cmake/: UseMinitest.cmake
modules/minitest2/cmake/: Config.cmake.in  UseMinitest.cmake
modules/minitest2/docs/: README.md
modules/minitest2/source/inc/: common.hpp  fixture.hpp  form.hpp  minitest.hpp  test_framework.hpp  unit_test.hpp
modules/minitest2/source/test/: ut_checks_asserts.hpp  ut_dummy_tests.hpp
modules/wpl/: CMakeLists.txt
modules/wpl/inc/: wpl_core.hpp
modules/wpl/src/: wpl_core.cpp
modules/wpl/ut/: ut_wpl.hpp  utmain.cpp
projects/caf_box/: CMakeLists.txt
projects/caf_box/doc/: EntitySystem.md  srcfile.template
projects/caf_box/inc/: caf.hpp
projects/caf_box/inc/CAF/: Demo.hpp  PreConfig.hpp
projects/caf_box/src/: caf_context.cpp
projects/caf_box/test/: UtDemoExamples.hpp  UtEntitySystem.hpp
projects/cgui_box/: CMakeLists.txt
projects/cgui_box/inc/: cgui.hpp
projects/cgui_box/src/: cgui.cpp
projects/cide_box/: CMakeLists.txt
projects/cide_box/cidr_executable/src/: MainGui.cpp
projects/cide_box/cidr_library/cg/: CMakeEmbeddedData.hpp.config.in
projects/cide_box/cidr_library/inc/: CIDR.hpp
projects/cide_box/cidr_library/src/: Backend.cpp  Main.cpp
projects/cide_box/inc/: cide_backend.h  cide_common.h  cide_ui_ast_explorer.h  cide_ui_launcher.hpp
projects/cide_box/src/: cide_backend.cpp
projects/cnd_box/: CMakeLists.txt
projects/cnd_box/docs/docs/: cmake_srcfile.template  doxydoc.h  mainpage.md
projects/cnd_box/inc/: CliMain.hpp  use_clmsg.hpp  use_corevals.hpp
projects/cnd_box/inc/ccapi/: CommonCppApi.hpp  ccapi.hpp  cppconfig.hpp  macroconfig.hpp
projects/cnd_box/inc/cldata/: ast.hpp  irast.hpp  synth_ast.hpp  tk.hpp  tk.tpp
projects/cnd_box/inc/cldev/: clmsg.hpp  dev_logger.hpp  error_messages.hpp  guideline_messages.hpp  warning_messages.hpp
projects/cnd_box/inc/cli/: CliDriver.hpp  CliParser.hpp  eFlag.hpp  eVerbosity.hpp
projects/cnd_box/inc/codegen/: CLangCodeModel.hpp  CLangCodegen.hpp  LirGenerator.hpp
projects/cnd_box/inc/compiler/: Compiler.hpp  TranslationInput.hpp  TranslationOutput.hpp
projects/cnd_box/inc/compiler_utils/: CompilerMessageBase.hpp  CompilerMessageBase.tpp  CompilerProcessResult.hpp  DevLogger.hpp  LoadSourceFile.hpp  ReflectedMetaEnum.hpp
projects/cnd_box/inc/corevals/: cli_messages.hpp  compiler_enum_traits.hpp  compiler_enums.hpp  (+2 more)
projects/cnd_box/src/: CliDriver.cpp  CliMain.cpp  Main.cpp  cnd_cst.cpp  cnd_lexer.cpp  cnd_main.cpp  cnd_scanner.cpp  token_closure.cpp
projects/cnd_box/ut/: ParserTestUtils.hpp  SutLexerBasics.cpp  SutLexerLexEscapedCharSequence.cpp  SutLexerLexIdentifier.cpp  SutLexerLexNumber.cpp  SutLexerLexPunctuator.cpp  UtCompeval.hpp  UtCompileToC.hpp  UtCompilerCli.hpp  UtParserGrammarRules.hpp  UtParserPrimaryExpr.hpp  sut_LexerBasics.cpp  sut_LexerLexEscapedCharSequence.cpp  sut_LexerLexIdentifier.cpp  sut_LexerLexPunctuator.cpp  test_trtools_parser.hpp  ut_cnd_scanner.hpp
projects/cxxx_box/: CMakeLists.txt
projects/cxxx_box/inc/: cxxx.hpp  cxxx_enumerated_flags.hpp  cxxx_expected.hpp  cxxx_fsys.hpp  cxxx_import_std.hpp  cxxx_macrodef.hpp  cxxx_tree.hpp
projects/cxxx_box/test/: ut_expected.h
projects/minitest_box/: CMakeLists.txt  README.md  config.cmake.in
projects/minitest_box/cmake/: StdMake.cmake  UseMinitest.cmake
projects/minitest_box/docs/: Doxyfile.in  doxydoc.h  mainpage.md
projects/minitest_box/export/: subproject-config.cmake.in
projects/minitest_box/inc/: common.hpp  fixture.hpp  form.hpp  minitest.hpp  test_framework.hpp  unit_test.hpp
projects/minitest_box/test/: ut_checks_asserts.hpp  ut_dummy_tests.hpp
projects/mta_box/: CMakeLists.txt
projects/mta_box/inc/: mta.hpp  mta_require.hpp
projects/ssgmono_box/: CMakeLists.txt  config.cmake.in
projects/ssgmono_box/cmake/: SsgCMakeUtils.cmake  SsgEmbedFiles.cmake  SsgGitPkg.cmake  SsgProjectBase.cmake  SsgProjectPackageUtils.cmake
projects/ssgmono_box/docs/: cmake-message-formatting-guide.md
projects/wpl_box/: CMakeLists.txt
projects/wpl_box/inc/: wpl_core.hpp
projects/wpl_box/src/: wpl_core.cpp
projects/wpl_box/test/: ut_wpl.hpp
(+2949 files in other folders)
